--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
   - name: Documentation
-    url: https://github.com/ktnyt/cclsp#readme
+    url: https://github.com/sysid/cclsp#readme
     about: Please check the README first for usage instructions
   - name: Discussions
-    url: https://github.com/ktnyt/cclsp/discussions
+    url: https://github.com/sysid/cclsp/discussions
     about: For general discussions and help from the community
