--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/ktnyt/cclsp.git"
+    "url": "https://github.com/sysid/cclsp.git"
   },
-  "homepage": "https://github.com/ktnyt/cclsp#readme",
+  "homepage": "https://github.com/sysid/cclsp#readme",
   "bugs": {
-    "url": "https://github.com/ktnyt/cclsp/issues"
+    "url": "https://github.com/sysid/cclsp/issues"
   },
   "files": [
     "dist",
